--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,19 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <h2 class="footer-heading">{{ site.title }} - {{ site.subtitle }}</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>{{ site.title }} - {{ site.subtitle }}</li>
+          <li>KVK: 237481729</li>
+          <li>BTW: 1229583</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
 
-      <div class="footer-col  footer-col-2">
+      <!-- <div class="footer-col  footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -43,7 +45,7 @@
           </li>
           {% endif %}
         </ul>
-      </div>
+      </div> -->
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
