--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,10 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }} - {{ site.subtitle }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }} - {{ site.subtitle }}</li>
+          <li><span id="footer-header">{{ site.title }} - {{ site.subtitle }}</span></li>
           <li>KVK: 237481729</li>
           <li>BTW: 1229583</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
