--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,9 @@
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
+	
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/main.js"></script>
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
