--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/main.js"></script>
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
