added more pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
 
         <a class="page-link" href="{{ '/visie/' | prepend: site.url }}">Visie</a>
         <a class="page-link" href="{{ '/about/' | prepend: site.url }}">Over KNOT</a>
+        <a class="page-link" href="{{ '/diensten/' | prepend: site.url }}">Diensten</a>
         <a class="page-link" href="{{ '/contact/' | prepend: site.url }}">Contact</a>
 
 
