removing baseurl references

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,15 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.url }}/">{{ site.title }}</a>
+    <a class="site-title" href="/">{{ site.title }}</a>
 
     <nav class="site-nav">
       <div class="trigger">
 
-        <a class="page-link" href="{{ '/visie/' | prepend: site.url }}">Visie</a>
-        <a class="page-link" href="{{ '/about/' | prepend: site.url }}">Over KNOT</a>
-        <a class="page-link" href="{{ '/diensten/' | prepend: site.url }}">Diensten</a>
-        <a class="page-link" href="{{ '/contact/' | prepend: site.url }}">Contact</a>
+        <a class="page-link" href="{{ '/visie/' }}">Visie</a>
+        <a class="page-link" href="{{ '/about/' }}">Over KNOT</a>
+        <a class="page-link" href="{{ '/diensten/' }}">Diensten</a>
+        <a class="page-link" href="{{ '/contact/'  }}">Contact</a>
 
 
       <!--   {% for page in site.pages %}
