--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
     <meta name="description" content="{{ site.description }}">
 	
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src={{ "/js/main.js" | prepend: site.url }}></script>
+    <script src={{ "/js/main.js" }}></script>
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.url }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
 </head>
