--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,11 @@
 /**
+ * Set everything to border-box
+ */
+* {
+    box-sizing: border-box;
+ }
+
+/**
  * Reset some basic elements
  */
 body, h1, h2, h3, h4, h5, h6,
@@ -7,7 +14,6 @@ dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
 }
-
 
 
 /**
@@ -116,34 +122,6 @@ blockquote {
 
     > :last-child {
         margin-bottom: 0;
-    }
-}
-
-
-
-/**
- * Code formatting
- */
-pre,
-code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
-}
-
-code {
-    padding: 1px 5px;
-}
-
-pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
-
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
     }
 }
 
