--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,19 @@
 
     <nav class="site-nav">
       <div class="trigger">
-
-        <a class="page-link" href="{{ '/visie/' }}">Visie</a>
-        <a class="page-link" href="{{ '/about/' }}">Over KNOT</a>
-        <a class="page-link" href="{{ '/diensten/' }}">Diensten</a>
-        <a class="page-link" href="{{ '/contact/'  }}">Contact</a>
-
+        <ul class="nav">
+          <li><a class="page-link" href="{{ '/visie/' }}">Visie</a></li>
+          <li><a class="page-link" href="{{ '/about/' }}">Over KNOT</a></li>
+          <li id="diensten">
+            <a class="page-link" href="{{ '/diensten/' }}">Diensten</a>
+            <ul class="sub">
+              {% for dienst in site.data.diensten %}
+                <li><a href="{{ dienst.link }}">{{ dienst.name }}</a></li>
+              {% endfor %}
+            </ul>
+            </li>
+          <li><a class="page-link" href="{{ '/contact/'  }}">Contact</a></li>
+        </ul>
       </div>
     </nav>
 
