--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -15,7 +15,11 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+
+$brand-color:      #0603ab;
+$brand-color-main: #0603ab;
+
+// $brand-color-main: #0905ff;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -50,3 +54,141 @@ $on-laptop:        800px;
         "base",
         "layout"
 ;
+
+
+.site-title {
+	font-weight: 600;
+}
+
+nav ul {
+	list-style: none;
+	position: relative;
+
+	& li {
+		display: inline-block;
+		margin: 0 10px;
+		position: relative;
+	}
+
+	.sub {
+		position: absolute;
+		display: none;
+		margin: 0;
+		top: 56px;
+		left: 0;
+		& li {
+			width: 120px;
+			float: left;
+		}
+	}
+
+	& ul li #diensten {
+		position: relative;
+	}
+
+	& #diensten:hover {
+		& .sub {
+			display: inline-block;
+			background: white;
+		}
+	}
+
+}
+
+.header-img-cont {
+	position: relative;
+	top: -101px;
+	z-index: -100;
+	min-width: 100vw;
+	vertical-align: middle;
+	text-align: center;
+	width: 100vw;
+	height: 500px;
+	overflow: hidden;
+
+	& img {
+		min-width: 100vw;
+	 }
+}
+
+.header-img {
+	position: absolute;
+	min-width: 100vw;
+	min-height: 100vh;
+	top: 0;
+	left: 0;
+	z-index: -100;
+}
+
+.home .header {
+	
+	height: 100vh;
+	overflow: auto;
+
+	& h1 {
+		position: relative;
+		top: -135px;
+		width: 370px;
+		margin: 40vh auto 0 auto;
+		padding: 20px 10px 20px 25px;
+		// padding-left: 25px;
+		font-size: 2.5em;
+		font-weight: 300;
+		line-height: 1.3;
+		background-color: white;
+		border: 5px solid $brand-color;
+	}
+}
+
+nav a {
+	color: $brand-color-main !important;
+}
+
+nav {
+	font-weight: 600;
+}
+
+.header h1 {
+	font-weight: 300;
+	
+	border: 5px solid $brand-color;
+}
+
+input {
+	font-size: .9em;
+	width: 300px;
+	height: 35px;
+	margin: 5px 0;
+	padding-left: 10px;
+	border: 3px solid $brand-color;
+	background: white;
+}
+
+input[type="submit"] {
+	color: $brand-color;
+}
+
+input[type="submit"]:hover {
+	background: $brand-color;
+	color: white;
+}
+
+textarea {
+	width: 100%;
+	max-width: 960px;
+	height: 240px;
+	border: 3px solid $brand-color;
+	padding: 5px;
+	font-size: .9em;
+	// cols: 50;
+	// rows: 100;
+}
+
+.contact-list {
+	color: white;
+
+	 & a {
+	 	color: white;
+	 	text-decoration: underline;
+	 }
+}
