centered image home page and fix vh units ios 7

--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,1 +1,4 @@
-<img class="header-img" src="assets/img/photo_featured2.jpg">
+<div class="header-img">
+	<!-- <img class="header-img" src="assets/img/photo_featured2.jpg"> -->
+</div>
+	
