--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="keywords" content="{% if page.meta-tags %}{{ page.meta-tags }}{% else %}{{ site.tags }}{% endif %}">
+
 	
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src={{ "/js/main.js" }}></script>
