--- a/css/main.scss
+++ b/css/main.scss
@@ -90,6 +90,7 @@ nav ul {
 		& .sub {
 			display: inline-block;
 			background: white;
+			z-index: 10;
 		}
 	}
 
@@ -114,11 +115,11 @@ nav ul {
 .header-img {
 	position: absolute;
 	min-width: 100vw;
-	min-height: 100vh;
+	height: 100vh;
 	top: 0;
 	left: 0;
 	z-index: -100;
-	background: url(/assets/img/bg1.jpg) center center / cover no-repeat;
+	background: url(/assets/img/photo_featured2.jpg) center center / cover no-repeat;
 }
 
 // Fix for vh units in iOS 7
