--- a/css/main.scss
+++ b/css/main.scss
@@ -125,13 +125,33 @@ nav ul {
 // Fix for vh units in iOS 7
 // iPad portrait
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+	.home .header  {
+		height: 1024px;
+
+		&  h1 {
+			margin: 410px auto 0 auto;
+		}
+	}
+
 	.header-img {
 		height: 1024px;
 	}
+
+
 }
 
 // iPad landscape
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape) {
+	
+	.home .header  {
+		height: 768px;
+
+		&  h1 {
+			margin: 307px auto 0 auto;
+		}
+	}
+
+
 	.header-img {
 		height: 768px;
 	}
@@ -139,6 +159,14 @@ nav ul {
 
 // iPhone 5
 @media screen and (device-aspect-ratio: 40/71) {
+	.home .header  {
+		height: 500px;
+
+		&  h1 {
+			margin: 200px auto 0 auto;
+		}
+	}
+
 	.header-img {
 		height: 500px;
 	}
