--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,6 +268,7 @@
   height: 470px;
 }
  
+
 .circle-wrapper {
   overflow: hidden;
   z-index: 0;
@@ -275,24 +276,16 @@
   & .col {
     float: left;
     margin-bottom: 35px;
-    width: -webkit-calc(100% / 3;);
-    width: calc(100% / 3); 
-
-    &:nth-child(3n) {
-        padding-left: -webkit-calc(33.3333% - 200px);
-        padding-left: calc(33.3333% - 200px);
-    }
-
-    &:nth-child(3n+2) {
-        padding-left: calc( (33.3333% - 200px) / 2);
-    }
+    width: -webkit-calc(100% / 3);
+    width:         calc(100% / 3);
 
     & .circle {
-        
+      margin: 0 auto;
     }
 
   }
 }
+
 
 .circle {
     text-align: center;
@@ -320,6 +313,21 @@
     }
 }
 
+$custom-breakpoint: 650px;
+
+@media (max-width: 650px) {
+    .circle-wrapper {
+    & .col {
+      width: -webkit-calc(100% / 2);
+      width:         calc(100% / 2);
+
+      & .cicle {
+        margin: 0 auto;
+      }
+    }
+  }
+
+}
  
 .overlay {
   z-index: 10;
@@ -327,7 +335,7 @@
   top: 0px;
   // background: lightblue;
   padding: 25px;
-  width: 680px;
+  width: 100%;
   // height: 500px;
   /*opacity: 0;
   transition: opacity 1s;*/
