--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="{% if page.meta-tags %}{{ page.meta-tags }}{% else %}{{ site.data.tags.tags }}{% endif %}">
 
 
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src={{ "/js/main.js" }}></script>
 
     <link rel="stylesheet" href="{{ "/css/main.css" }}">
