--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,33 @@
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script type="text/javascript">
+    var host = "www.knot.consulting";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+  </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}KNOT - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-    
-    <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="keywords" content="{% if page.meta-tags %}{{ page.meta-tags }}{% else %}{{ site.data.tags.tags }}{% endif %}">
+  <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="keywords" content="{% if page.meta-tags %}{{ page.meta-tags }}{% else %}{{ site.data.tags.tags }}{% endif %}">
 
 
-	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src={{ "/js/main.js" }}></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src={{ "/js/main.js" }}></script>
 
-    <link rel="stylesheet" href="{{ "/css/main.css" }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" }}">
+  <link rel="canonical" href="{{site.url }}{{ page.url | replace:'index.html','' }}">
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-58238923-1', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-58238923-1', 'auto');
+    ga('send', 'pageview');
 
     </script>
 </head>
