--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -299,8 +299,6 @@
     width: 200px;
     height: 200px;
     border: 5px solid $brand-color;
-    // border-radius: 100%;
-    // background: $grey-color;
 
     &:hover {
         background-color: $brand-color;
@@ -334,6 +332,16 @@
     .circle h2 {
         padding-top: calc(30% + (100vw - 400px) * 0.07);
     }
+
+    .circle h2 {
+        font-size: 1.2em;
+    }
+
+    .circle p {
+        font-size: .9em;
+        width: 98%;
+        margin: -12px auto 0;
+    }
 }
 
  
@@ -341,12 +349,7 @@
   z-index: 10;
   position: relative;
   top: 0px;
-  // background: lightblue;
   padding: 25px;
-  width: 680px;
-  // height: 500px;
-  /*opacity: 0;
-  transition: opacity 1s;*/
   border: 5px solid $brand-color;
 }
  
@@ -356,12 +359,10 @@
   position: absolute;
   right: 25px;
   top: 25px;
-  // background-color: red;
   border: 2px solid black;
   z-index: 20;
 
   &:hover {
-    // background-color: darkred;
     background: black;
     color: white;
   }
